12/04/24 Updated GeoIP databases
12/04/11 Added 'cron' function to denorarc for crontab usage 
12/04/11 Updated ScaryNet protocol
11/05/04 r435 Fixed formatting of docs/EVENTS
11/04/10 r428 documented the -protocoldebug option in the -help output
11/04/10 r428 made denora accept options that start with --
11/02/11 r419 Updated Denora icon
11/02/11 r416 Updated Windows installer

Fixes
13/06/02 Fixed a memleak in cron_chanstats.c
13/05/06 Fixed merging users with itself.
12/11/02 Fixed a misplaced free() in unrealircd.c (#1458)
12/10/15 Fixed a misplacement of u in users.c
12/10/10 Fixed a double free in scarynet.c/denora_event_quit
12/10/10 Free msg in <protocol>.c/denora_event_quit
12/07/25 Fixed win32 specific warnings, in some cases the fugly way
12/07/23 Fixed Config not remembering thread settings
12/07/23 Threading needed more fixes, hope it works now :) (Now works)
12/07/22 Fixed threading by actually documenting it in conf (duh)
12/07/22 Several more warnings and fixes in sysconf.h.in / configure(.in)
12/07/17 Fixed some warnings on x86_64
12/07/17 Hybrid kills denora after sending PONG the wrong way (hopefully fixes #1420)
12/07/17 Added account support to charybdis and shadowircd (fixes #1426)
12/07/17 Made ss_exclude use lower() in queries (fixes #1240)
12/07/17 Removed fnmatch from mysql_backup and now check result of file permission check properly
12/07/17 Found a couple of missing free()'s
12/07/16 #1418 is no more. Sorry for the many pushes, but it was worth it ;)
12/07/16 Removed is_md5 (no longer need it) and properly fix #1176 using #ifdef HAVE_CRYPT
12/07/15 Added is_md5() and used it to fix #1176 
12/07/15 Fixed double presence of REGSCRIPT in config.cache (fixes #1428)
12/07/15 xmlrpc didn't like free(av) which caused #1128
12/07/15 Fixed some memleaks in lastspoke.c and converted it to unix format
12/07/09 More warning fixes
12/07/08 Lots of changes in users.c/channels.c/ctcp.c
12/07/08 Fixed p10_gline to support 2.10.12's 6 arg gline format